fix post link hover color in dark mode

--- a/public/css/missing-content-styles.css
+++ b/public/css/missing-content-styles.css
@@ -49,3 +49,8 @@
     color: #374151;
     cursor: pointer;
 }
+.dark .ck-content a:hover {
+    color: #ffffff;
+    cursor: pointer;
+}
+
